# onec-vecgraph

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  sources.example.yaml
.claude/skills/onec-vecgraph-ops/: SKILL.md
.github/prompts/: onec-vecgraph-ops.prompt.md
docs/: DEPLOYMENT.md  DEPLOY_DETAILED.md  DEPLOY_RUNBOOK.md  INCREMENTAL_TEST_PLAN.md  ITS_PARSER_REQUIREMENTS.md  MCP_USAGE.md  OPERATOR_PLAYBOOK.md  ORCHESTRATOR_CONTRACT.md  OVERLAY.md  SERVICE_OVERVIEW.md  SESSION_BOOTSTRAP.md  STATE.md
docs/tasks/: baseline-reindex-over-mcp.md
scripts/: preflight.ps1  verify_demo.py
src/onec_vecgraph/: __init__.py  __main__.py  admin_server.py  baseline.py  callgrapher.py  chunking.py  cli.py  config.py  dashboard.py  indexer.py  ingest.py  jobs.py  overlay.py  overlay_index.py  progress.py  queries.py  server.py  tenancy.py  vectorizer.py  write_server.py
src/onec_vecgraph/bsl/: __init__.py  parser.py
src/onec_vecgraph/embeddings/: __init__.py  base.py  cloud.py  hashing.py  local.py  reranker.py  runtime.py
src/onec_vecgraph/graph/: __init__.py  builder.py  schema.py
src/onec_vecgraph/parsing/: __init__.py  detect.py  dispatch.py  dump.py  dumpinfo.py  forms.py  model.py  ns.py  objects.py  types.py
src/onec_vecgraph/parsing/edt/: __init__.py  forms.py  (+3 more)
src/onec_vecgraph/sources/: __init__.py  base.py  git_artifacts.py  git_repo.py  hbk.py  hbk_container.py  its.py  linking.py  manifest.py  markdown.py  registry.py
src/onec_vecgraph/storage/: neo4j_store.py
tests/: test_auth.py  test_baseline.py  test_bsl.py  test_callgraph.py  test_chunking.py  test_cloud_embeddings.py  test_common_forms.py  test_dashboard.py  test_detail.py  test_edt.py  test_hbk.py  test_overlay.py  test_parsing.py  test_routine_source.py  test_search.py  test_shared_tenant.py  test_smoke.py  test_sources.py  test_tenancy.py
