[project]
name = "onec-vecgraph"
version = "0.1.0"
description = "MCP server for vectorizing 1C:Enterprise configurations (Configurator XML dump) and building dependency + BSL call graphs in Neo4j."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "GrandTrade" }]
dependencies = [
    "mcp>=1.9.0",
    "neo4j>=5.26",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "lxml>=5.2",
]

[project.optional-dependencies]
# Local embeddings (Qwen3-Embedding / BGE-m3 via sentence-transformers).
# torch is pulled from the CUDA 12.8 index below (Blackwell / RTX 50xx support).
local-embeddings = ["sentence-transformers>=3.1", "torch>=2.7"]
# Cloud embeddings (OpenAI / OpenAI-compatible / Voyage).
cloud-embeddings = ["openai>=1.40", "voyageai>=0.3"]
# Multi-source ingestion: YAML manifests (git repos are cloned via the system `git`).
ingest = ["pyyaml>=6"]
# BSL parsing for the call graph (milestone M3).
bsl = ["tree-sitter>=0.23"]

[dependency-groups]
dev = ["pytest>=8.2", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
onec-vecgraph = "onec_vecgraph.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onec_vecgraph"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.uv]
# Keep uv's cache on disk D (project convention).
cache-dir = "D:/tools/uv/cache"

# PyTorch CUDA 12.8 wheels (Blackwell / RTX 50xx). Used by the 'local-embeddings' extra:
#   uv sync --extra local-embeddings
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
